@@ -20,6 +20,7 @@
 #include <cmci.h>
 #include <native.h>
 #include <unistd.h>
+#include <stdlib.h>
 #include <string.h>
 
 static char * _HOSTNAME;
