@@ -10,6 +10,7 @@ Bugs:
 - 3043282: XML gen for embedded instances for invokeMethod is incorrect
 - 3059060: 'struct _CIMCArgsFT' not defined in cimc/cimcft.h
 - 2348900: Concurrency issue when parsing responses
+- 2793377: Missing includes
 
 Changes in 2.2.1
 ================
